added cell extension and graph cells

--- a/src/app/pages/lesson/subtopic/subtopic.html
+++ b/src/app/pages/lesson/subtopic/subtopic.html
@@ -46,6 +46,8 @@
       @if (cell.type === "text") {
         <!-- Markdown Text Cells -->
         <app-markdown-cell [data]="cell"></app-markdown-cell>
+      } @else if (cell.type === "graph") {
+        <app-chart-cell [data]="cell"></app-chart-cell>
       } @else {
         <!-- Default Fallback Cells -->
         <app-markdown-cell [data]="cell"></app-markdown-cell>
