--- a/src/app/pages/subject-create/lesson-generation/lesson-generation.html
+++ b/src/app/pages/subject-create/lesson-generation/lesson-generation.html
@@ -21,23 +21,16 @@
   </p>
 
   <!-- Topic List -->
-  <div 
-    #topicList
-    class="flex flex-row w-full overflow-x-scroll scrollbar-none" 
-    [class.flex-wrap]="topicsExpanded"
-    cdkDropList 
-    (cdkDropListDropped)="drop($event)" 
-    cdkDropListOrientation="mixed"
-  >
+  <div class="flex flex-row flex-wrap mb-16" cdkDropList (cdkDropListDropped)="drop($event)" cdkDropListOrientation="mixed">
     @for (topic of topics; track topic.id) {
       <button
-        class="flex flex-row rounded-full py-2 px-3 lg:py-4 lg:px-6 mr-4 my-1 text-sm text-white w-max whitespace-nowrap"
+        class="flex flex-row rounded-full py-2 px-3 lg:py-4 lg:px-6 mr-4 my-1 text-sm text-white"
         [class.bg-prussian-blue-900]="topic.selected"
         [class.bg-gray-500]="!topic.selected"
         (click)="toggleTopicSelection(topic.id)"
         [disabled]="loading || (subjectStatus !== 'pending topic selection')"
         cdkDrag
-        [cdkDragDisabled]="loading || (topicOverflowing && !topicsExpanded)"
+        [cdkDragDisabled]="loading"
       >
         @if (topic.selected) {
           <img src="images/x-icon.svg" alt="X" class="mr-2 w-3">
@@ -47,21 +40,8 @@
     }
   </div>
 
-  @if (topicOverflowing) {
-    <button 
-      class="bg-[var(--bg-hover)] w-max lg:hover:text-[var(--text-primary-hover)] rounded-full py-2 px-3 lg:py-4 lg:px-6 mt-4"
-      (click)="toggleTopicExpansion()"
-    >
-      @if (!topicsExpanded) {
-        Show all ({{topics.length}}) topics
-      } @else {
-        Show fewer topics
-      }
-    </button>
-  }
-
   <!-- Preference and Settings Form -->
-  <form #form="ngForm" class="border-2 border-[var(--text-primary)] text-sm md:text-lg rounded-xl p-3 md:pl-6 mt-16">
+  <form #form="ngForm" class="border-2 border-[var(--text-primary)] text-sm md:text-lg rounded-xl p-3 md:pl-6">
     <!-- Preference Text Box -->
     <textarea 
     type="text" 
