--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="flex flex-col w-full px-6 md:px-20 lg:px-32 pb-6">
+<div class="flex flex-col w-full px-6 md:px-20 lg:px-32">
   <!-- Creation step tabs -->
   <div class="flex flex-row mb-8 w-full">
     <app-creation-step-tab
@@ -19,41 +19,41 @@
 
   <h1 class="text-2xl font-medium">Create a new subject</h1>
 
-  <form #form="ngForm" class="flex flex-col w-full">
-    
-    <div class="flex flex-col lg:flex-row gap-10 my-6 w-full">
-      <div class="w-full lg:w-1/2">
-        <!-- Subject Name -->
-        <div class="w-full">
-          <label class="font-medium">Subject Name</label>
-  
-          <input
-            type="text"
-            name="subjectName"
-            placeholder="Name of the subject"
-            class="bg-[var(--bg-page)] p-4 my-1 rounded-lg border border-prussian-blue-300 text-sm w-full"
-            [(ngModel)]="subjectName"
-            required
-            #nameCtrl="ngModel"
-            appSubjectNameValidator
-            [disabled]="!(subject?.status == 'pending naming')"
-          />
-  
-          @if (nameCtrl.invalid && nameCtrl.touched) {
-            <div class="text-red-500 text-sm mt-1">
-              @if (nameCtrl.errors?.["required"]) {
-                <span>Subject Name cannot be empty</span>
-              }
-              @if (nameCtrl.errors?.["invalidName"]) {
-                <span>Subject Name cannot be longer than 30 characters</span>
-              }
-            </div>
+  <form #form="ngForm" class="flex flex-col w-full my-6">
+    <!-- Subject Name -->
+    <div class="w-full lg:w-6/12">
+      <label>Subject Name</label>
+
+      <input
+        type="text"
+        name="subjectName"
+        placeholder="Name of the subject"
+        class="bg-[var(--bg-page)] p-4 my-1 rounded-lg border border-prussian-blue-300 text-sm w-full"
+        [(ngModel)]="subjectName"
+        required
+        #nameCtrl="ngModel"
+        appSubjectNameValidator
+        [disabled]="!(subject?.status == 'pending naming')"
+      />
+
+      @if (nameCtrl.invalid && nameCtrl.touched) {
+        <div class="text-red-500 text-sm mt-1">
+          @if (nameCtrl.errors?.["required"]) {
+            <span>Subject Name cannot be empty</span>
+          }
+          @if (nameCtrl.errors?.["invalidName"]) {
+            <span>Subject Name cannot be longer than 30 characters</span>
           }
         </div>
-        <!-- Upload Box -->
+      }
+    </div>
+
+    <!-- Upload + File List Section -->
+    <div class="flex flex-col lg:flex-row gap-10 mt-6 w-full">
+      <!-- Upload Box -->
+      <div class="w-full lg:w-7/12">
         <div
-          class="flex flex-col items-center justify-center w-full border-2 border-dashed border-gray-400 rounded-2xl my-2 px-6 py-16 
-          cursor-pointer transition lg:hover:border-prussian-blue-300 bg-[var(--bg-hover)]"
+          class="flex flex-col items-center justify-center w-full border-2 border-dashed border-gray-400 rounded-2xl px-6 py-12 cursor-pointer transition lg:hover:border-prussian-blue-300 bg-[var(--bg-hover)]"
           (drop)="onFileDrop($event)"
           (dragover)="onDragOver($event)"
           (dragleave)="onDragLeave($event)"
@@ -68,7 +68,7 @@
               className="w-5"
             ></app-theme-icon>
           </label>
-  
+
           <input
             type="file"
             id="fileInput"
@@ -77,11 +77,11 @@
             multiple
             [accept]="acceptString"
           />
-  
+
           <p class="text-[var(--text-alt)] text-sm text-center mt-4">
             Upload your files here to start generating personalized lessons.
           </p>
-  
+
           <p class="text-[var(--text-alt-hover)] text-xs mt-2 text-center">
             {{ allowedExtensions.join(", ").toUpperCase() }}. Max file size:
             {{ single_file_size }}MB. Max total files size:
@@ -90,31 +90,30 @@
         </div>
       </div>
 
-        <!-- File List -->
+      <!-- File List -->
       @if (files.length > 0) {
-        <div class="w-full lg:w-6/12 flex flex-col max-h-[340px]">
-          <p class="text-sm font-medium text-[var(--text-alt)] mb-2">Files ({{files.length}})</p>
+        <div class="w-full lg:w-5/12 flex flex-col max-h-[340px]">
+          <p class="text-sm font-medium text-[var(--text-alt)] mb-4">Uploads</p>
 
           <div class="overflow-y-auto space-y-4 pr-2">
             @for (file of files; track $index) {
               <div
                 class="flex items-center justify-between bg-[var(--bg-page)] border border-gray-200 p-4 rounded-2xl"
               >
-                <div class="flex items-center gap-3 flex-grow max-w-[90%]">
+                <div class="flex items-center gap-3">
                   <!-- Placeholder File Icon -->
                   <app-theme-icon
                     name="upload-file-icon"
                     className="w-5"
-                    class="w-5"
                   ></app-theme-icon>
 
-                  <div class="flex flex-col flex-grow max-w-[90%]">
-                    <span class="text-sm font-medium truncate block">
+                  <div class="flex flex-col">
+                    <span class="text-sm font-medium truncate max-w-[180px]">
                       {{ file.name }}
                     </span>
 
-                    <span class="text-xs text-[var(--text-alt-hover)] block w-max">
-                      Ready for upload ({{ formatFileSize(file) }})
+                    <span class="text-xs text-[var(--text-alt-hover)]">
+                      Ready
                     </span>
                   </div>
                 </div>
@@ -123,13 +122,12 @@
                   type="button"
                   (click)="removeFile(file)"
                   [disabled]="loading"
-                  class="text-gray-400 lg:hover:text-gray-700 transition w-6"
+                  class="text-gray-400 lg:hover:text-gray-700 transition"
                 >
                   <!-- Replace with closed-square icon later -->
                   <app-theme-icon
                     name="close-icon"
-                    className="w-full"
-                    class="w-full"
+                    className="w-6"
                   ></app-theme-icon>
                 </button>
               </div>
@@ -139,22 +137,22 @@
       }
     </div>
 
-      <!-- Submit Button -->
-      <div class="flex flex-row items-center">
-        <button
-          type="button"
-          class="w-max bg-prussian-blue-700 lg:hover:bg-prussian-blue-400 disabled:bg-prussian-blue-400 text-white flex items-center px-6 py-3 rounded-md text-sm"
-          (click)="onSubmit()"
-          [disabled]="loading"
-        >
-          Next
-          <img src="images/next-icon.svg" class="w-3 ml-2" />
-        </button>
+    <!-- Submit Button -->
+    <div class="flex flex-row items-center mt-8">
+      <button
+        type="button"
+        class="w-max bg-prussian-blue-700 lg:hover:bg-prussian-blue-400 disabled:bg-prussian-blue-400 text-white flex items-center px-6 py-3 rounded-md text-sm"
+        (click)="onSubmit()"
+        [disabled]="loading"
+      >
+        Next
+        <img src="images/next-icon.svg" class="w-3 ml-2" />
+      </button>
 
-        <div [class]="loading ? 'flex items-center ml-4' : 'hidden'">
-          <img src="images/spinner.gif" class="w-6 h-6 mr-2" />
-          loading...
-        </div>
+      <div [class]="loading ? 'flex items-center ml-4' : 'hidden'">
+        <img src="images/spinner.gif" class="w-6 h-6 mr-2" />
+        loading...
       </div>
-    </form>
+    </div>
+  </form>
 </div>
