implemented graph conext, audio and executable code cells

--- a/src/app/pages/lesson/cells/chart-cell/chart-cell.html
+++ b/src/app/pages/lesson/cells/chart-cell/chart-cell.html
@@ -3,4 +3,7 @@
     #plotContainer
     class="w-max h-96 bg-white rounded-xl shadow"
   ></div>
+  <div class="text-[var(--text-primary)] max-w-[710px]">
+    <em>{{ context }}</em>
+  </div>
 </div>
