--- a/src/app/pages/subject-create/lesson-generation/lesson-generation.html
+++ b/src/app/pages/subject-create/lesson-generation/lesson-generation.html
@@ -106,80 +106,24 @@
           [class]="`absolute w-64 bottom-10 left-2 md:bottom-auto md:top-12 md:left-12 rounded-lg flex flex-col items-start 
           border-[1px] border-[var(--text-primary)] bg-[var(--bg-page)] ${!settingsPopup? 'hidden' : ''}`"
         >
-          <!-- Content Cells Button -->
-          <button 
-            [class]="`rounded-t-lg flex flex-row w-full items-center px-2 py-2 
-            ${!extensionSettings.cells.enabled ? 'bg-[var(--bg-page)] md:hover:bg-[var(--bg-hover)]'
-              : 'bg-[var(--text-secondary)] text-[var(--bg-page)]'}`"
-            (click)="toggleExtension('cells')"
-            [disabled]="loading  || (subjectStatus === 'pending lesson generation')"
-          >
-            <app-theme-icon name="cells-icon" class="w-5 mr-2" [invert]="extensionSettings.cells.enabled"/>
-            Content Cells
-            @if (extensionSettings.cells.enabled) {
-              <app-theme-icon name="x-icon" class="m-2 w-2 ml-auto" [invert]="true"/>
-            }
-          </button>
-
-          <!-- Exercise Button -->
-          <button 
-            [class]="`flex flex-row w-full items-center px-2 py-2 
-            ${!extensionSettings.exercise.enabled ? 'bg-[var(--bg-page)] md:hover:bg-[var(--bg-hover)]'
-              : 'bg-[var(--text-secondary)] text-[var(--bg-page)]'}`"
-            (click)="toggleExtension('exercise')"
-            [disabled]="loading  || (subjectStatus === 'pending lesson generation')"
-          >
-            <app-theme-icon name="exercise-icon" class="w-5 mr-2" [invert]="extensionSettings.exercise.enabled"/>
-            Exercise
-            @if (extensionSettings.exercise.enabled) {
-              <app-theme-icon name="x-icon" class="m-2 w-2 ml-auto" [invert]="true"/>
-            }
-          </button>
-
-          <!-- Exam Button -->
-          <button 
-            [class]="`flex flex-row w-full items-center px-2 py-2 
-            ${!extensionSettings.exam.enabled ? 'bg-[var(--bg-page)] md:hover:bg-[var(--bg-hover)]'
-              : 'bg-[var(--text-secondary)] text-[var(--bg-page)]'}`"
-            (click)="toggleExtension('exam')"
-            [disabled]="loading  || (subjectStatus === 'pending lesson generation')"
-          >
-            <app-theme-icon name="exam-icon" class="w-5 mr-2" [invert]="extensionSettings.exam.enabled"/>
-            Exam
-            @if (extensionSettings.exam.enabled) {
-              <app-theme-icon name="x-icon" class="m-2 w-2 ml-auto" [invert]="true"/>
-            }
-          </button>
-
-          <!-- Flashcards Button -->
-          <button 
-            [class]="`flex flex-row w-full items-center px-2 py-2 
-            ${!extensionSettings.flashcards.enabled ? 'bg-[var(--bg-page)] md:hover:bg-[var(--bg-hover)]'
-              : 'bg-[var(--text-secondary)] text-[var(--bg-page)]'}`"
-            (click)="toggleExtension('flashcards')"
-            [disabled]="loading  || (subjectStatus === 'pending lesson generation')"
-          >
-            <app-theme-icon name="flashcards-icon" class="w-5 mr-2" [invert]="extensionSettings.flashcards.enabled"/>
-            Flashcards
-            @if (extensionSettings.flashcards.enabled) {
-              <app-theme-icon name="x-icon" class="m-2 w-2 ml-auto" [invert]="true"/>
-            }
-          </button>
-
-          <!-- Glossary Button -->
-          <button 
-            [class]="`rounded-b-lg flex flex-row w-full items-center px-2 py-2 
-            ${!extensionSettings.glossary.enabled ? 'bg-[var(--bg-page)] md:hover:bg-[var(--bg-hover)]'
-              : 'bg-[var(--text-secondary)] text-[var(--bg-page)]'}`"
-            (click)="toggleExtension('glossary')"
-            [disabled]="loading  || (subjectStatus === 'pending lesson generation')"
-          >
-            <app-theme-icon name="glossary-icon" class="w-5 mr-2" [invert]="extensionSettings.glossary.enabled"/>
-            Glossary
-            @if (extensionSettings.glossary.enabled) {
-              <app-theme-icon name="x-icon" class="m-2 w-2 ml-auto" [invert]="true"/>
-            }
-          </button>
+          <!-- Extension Buttons -->
+          @for (extension of getExtensionList(); track $index) {
+            <button 
+              [class]="`flex flex-row w-full items-center px-2 py-2 
+              ${!extension.enabled ? 'bg-[var(--bg-page)] md:hover:bg-[var(--bg-hover)]'
+                : 'bg-[var(--text-secondary)] text-[var(--bg-page)]'}`"
+              [class.rounded-t-lg]="($index == 0)"
+              [class.rounded-b-lg]="($index == getExtensionList().length - 1)"
+              (click)="toggleExtension(extension.name)"
+              [disabled]="loading  || (subjectStatus === 'pending lesson generation')"
+            >
+              <app-theme-icon [name]="`${extension.name}-icon`" class="w-5 mr-2" [invert]="extension.enabled"/>
+              {{ extension.displayName }}
+              @if (extension.enabled) {
+                <app-theme-icon name="x-icon" class="m-2 w-2 ml-auto" [invert]="true"/>
+              }
+            </button>
+          }
         </div>
       </div>
 
@@ -194,11 +138,11 @@
     {{ extensionsEnabled ? 'Selected Extensions:' : 'No Extensions Selected' }}
   </div>
   <div class="self-center w-full md:w-1/2 my-2 flex flex-row items-center justify-center flex-wrap">
-    @for (extension of getExtensionList(); track $index) {
+    @for (extension of getEnabledExtensionList(); track $index) {
       @if (extension.enabled) {
         <div class="flex flex-row items-center rounded-lg px-2 py-2 m-1 md:m-2 shadow-lg border-2 border-[1px] border-[var(--text-primary)] bg-[var(--bg-page)] cursor-default">
           <app-theme-icon [name]="`${extension.name}-icon`" class="w-5 mr-1"/>
-          {{ extension.name.charAt(0).toUpperCase() + extension.name.slice(1) }}
+          {{ extension.displayName }}
         </div>
       }
     }
